[package]
name = "cyberfly-rust-node"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"


# Redis client
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "streams"] }

# GraphQL
async-graphql = "7.0"
async-graphql-axum = "7.0"
axum = "0.8"

# Signature verification
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
signature = "2.2"

# CRDT
automerge = "0.6"

# IPFS - Using Iroh (modern Rust IPFS implementation)
# Using compatible versions to avoid dependency conflicts
iroh = { version = "0.94.0", features = ["discovery-local-network", "discovery-pkarr-dht"] }
iroh-blobs = "0.96.0"
iroh-gossip = "0.94.0"
# iroh-docs = "0.94.0"  # Temporarily disabled due to redb version conflict
dashmap = "6.0"

# MQTT
rumqttc = "0.24"
tokio-util = "0.7"
chrono = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.7"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sled = "0.34"

# Binary serialization used for storing tuples in sled
bincode = "1.3"

# Utilities
hex = "0.4"
base64 = "0.22"
uuid = { version = "1.10", features = ["v4", "serde"] }
sha2 = "0.10"
md5 = "0.7"
rand = "0.9"
regex = "1.10"
jsonpath_lib = "0.3"
moka = "0.10"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
tempfile = "3.8"
mockall = "0.12"
serial_test = "3.0"

# Property-based testing
proptest = "1.4"

# HTTP testing for GraphQL
reqwest = { version = "0.11", features = ["json"] }

# Additional testing utilities
assert_matches = "1.5"
pretty_assertions = "1.4"
