[package]
name = "cyberfly-rust-node"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime (optimized features only)
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "net", "fs", "time", "sync", "signal"] }
tokio-stream = "0.1"
futures = "0.3"




# GraphQL
async-graphql = "7.0"
async-graphql-axum = "7.0"
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors"] }

# Signature verification
ed25519-dalek = { version = "3.0.0-pre.1", features = ["rand_core"] }
signature = "2.2"
libp2p-identity = { version = "0.2", features = ["ed25519", "peerid"] }

# CRDT
automerge = "0.6"

# IPFS - Using Iroh (modern Rust IPFS implementation)
# Using compatible versions to avoid dependency conflicts
iroh = { version = "0.94.0", features = ["discovery-local-network", "discovery-pkarr-dht"] }
iroh-blobs = "0.96.0"
iroh-gossip = "0.94.0"
# iroh-docs = "0.94.0"  # Temporarily disabled due to redb version conflict
dashmap = "6.0"

# MQTT
rumqttc = "0.24"
chrono = "0.4"

# Kadena blockchain interaction
rust_pact = "0.1.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sled = { version = "0.34", features = ["compression"] }

# Binary serialization
bincode = "1.3"

# Essential utilities
base64 = "0.22"
uuid = { version = "1.10", features = ["v4", "serde"] }
sha2 = "0.10"
md5 = "0.7"
hex = "0.4"
regex = "1.10"
rand = "0.9"
jsonpath_lib = "0.3"
moka = { version = "0.10", features = ["future"] }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"
once_cell = "1.19"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
tempfile = "3.8"
serial_test = "3.0"

# Compilation optimization profiles
[profile.dev]
# Faster incremental compilation for development
opt-level = 0          # No optimization (fastest compile)
debug = true           # Keep debug info
incremental = true     # Enable incremental compilation (default)
codegen-units = 256    # More parallelism for faster compilation (slight runtime cost)

[profile.test]
# Faster test compilation
opt-level = 0          # No optimization for tests
debug = true           # Keep debug info for better stack traces

[profile.release]
# Full optimization for production
opt-level = 3          # Maximum optimization
lto = "thin"           # Thin LTO for faster linking with good optimization
codegen-units = 1      # Better optimization, slower compile (only for release)
strip = true           # Strip symbols to reduce binary size
