[package]
name = "cyberfly-rust-node"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime (optimized features only)
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "net", "fs", "time", "sync", "signal"] }
tokio-stream = "0.1"
futures = "0.3"




# GraphQL
async-graphql = "7.0"
async-graphql-axum = "7.0"
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors"] }

# Signature verification
ed25519-dalek = { version = "3.0.0-pre.1", features = ["rand_core"] }
signature = "2.2"
libp2p-identity = { version = "0.2", features = ["ed25519", "peerid"] }

# OpenSSL with vendored feature for cross-compilation
openssl-sys = { version = "0.9", features = ["vendored"] }

# CRDT
automerge = "0.6"

# IPFS - Using Iroh (modern Rust IPFS implementation)
# Updated to 0.95.1 - new relay, error handling, and connection API improvements
iroh = { version = "0.95", features = ["discovery-local-network", "discovery-pkarr-dht"] }
iroh-blobs = "0.97"
iroh-gossip = "0.95"
# iroh-docs = "0.95"  # Temporarily disabled due to redb version conflict
dashmap = "6.0"

# MQTT
rumqttc = "0.24"
chrono = { version = "0.4", features = ["serde"] }

# Kadena blockchain interaction
rust_pact = "0.1.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sled = { version = "0.34", features = ["compression"] }

# Binary serialization
bincode = "1.3"
postcard = { version = "1.0", features = ["alloc"] }

# Essential utilities
base64 = "0.22"
uuid = { version = "1.10", features = ["v4", "serde"] }
sha2 = "0.10"
md5 = "0.7"
hex = "0.4"
regex = "1.10"
rand = "0.9"
jsonpath_lib = "0.3"
moka = { version = "0.10", features = ["future"] }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"
once_cell = "1.19"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
tempfile = "3.8"
serial_test = "3.0"

# Compilation optimization profiles
[profile.dev]
# Faster incremental compilation for development
opt-level = 0          # No optimization (fastest compile)
debug = true           # Keep debug info
incremental = true     # Enable incremental compilation (default)
codegen-units = 256    # Maximum parallelism for fastest compilation
split-debuginfo = "unpacked" # Faster debug builds on macOS/Linux

# Optimize dependencies even in dev mode (huge compile time savings)
[profile.dev.package."*"]
opt-level = 2          # Optimize dependencies while keeping our code fast to compile
debug = false          # Don't generate debug info for dependencies

[profile.test]
# Faster test compilation
opt-level = 0          # No optimization for tests
debug = true           # Keep debug info for better stack traces
incremental = true     # Enable incremental compilation for tests

# Optimize test dependencies
[profile.test.package."*"]
opt-level = 2
debug = false

[profile.release]
# Full optimization for production - maximum performance
opt-level = 3          # Maximum optimization
lto = "fat"            # Full LTO for maximum performance
codegen-units = 1      # Single codegen unit for best optimization
strip = true           # Strip symbols to reduce binary size
panic = "abort"        # Smaller binary, faster panic handling
debug = false          # No debug info in release

# Optional: Use faster linker (requires mold/lld installation)
# Uncomment after installing: brew install mold (macOS) or cargo install mold (cross-platform)
# [target.x86_64-apple-darwin]
# rustflags = ["-C", "link-arg=-fuse-ld=mold"]
# 
# [target.aarch64-apple-darwin]
# rustflags = ["-C", "link-arg=-fuse-ld=mold"]
